Added tests and renamed modules

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name    = Lingua-AR-Vowels
+name    = Lingua-AR-Tashkeel
 author  = Ahmad Fatoum <athreef@cpan.org>
 license = Perl_5
 copyright_holder = Ahmad Fatoum
