Fixed documentation formatting
Some &lrms and removed not up to date parts

--- a/dist.ini
+++ b/dist.ini
@@ -8,10 +8,10 @@ copyright_year   = 2016
 
 [GithubMeta]
 issues = 1
-user   = a3f
+user   = athreef
 [@Git]
 [Git::Init]
-remote = origin git@github.com:a3f/%N.git
+remote = origin git@github.com:athreef/%N.git
 [Git::NextVersion]
 [ChangelogFromGit]
 [OurPkgVersion]
