--- a/dist.ini
+++ b/dist.ini
@@ -4,9 +4,7 @@ license = Perl_5
 copyright_holder = Ahmad Fatoum
 copyright_year   = 2016
 
-[Prereqs]
-Lingua::AR::Regexp = 0.002
-Regexp::CharClasses::Helper = 0.003
+[AutoPrereqs]
 
 [@Starter]
 
